[Fix #95] Hyphenating to avoid overlapping names.

--- a/frontend/src/app/components/weekly-calendar/weekly-calendar.component.scss
+++ b/frontend/src/app/components/weekly-calendar/weekly-calendar.component.scss
@@ -103,6 +103,8 @@ $swim-land-border: 2pt dotted transparentize($gray, 0.5);
 
   cursor: pointer;
 
+  hyphens: auto;
+
   position: relative;
 
   margin-left: -2pt;
